plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.1'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.cheering'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'

    toolchain {
        languageVersion = JavaLanguageVersion.of(17) // Java 17 고정
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //S3
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    //휴대폰 인증
    implementation 'net.nurigo:sdk:4.3.0'

    //websocket
    implementation 'org.springframework.boot:spring-boot-starter-reactor-netty'
    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    testImplementation 'org.springframework.amqp:spring-rabbit-test'
    implementation 'io.netty:netty-resolver-dns-native-macos:4.1.68.Final:osx-aarch_64'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.16.1'

    //fcm
    implementation 'com.google.firebase:firebase-admin:9.2.0'

    //redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    //model-mapper
    implementation 'org.modelmapper:modelmapper:2.4.2'

    //java-jwt
    implementation 'com.auth0:java-jwt:4.4.0'

    //jjwt
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    //swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    //sentry
    implementation 'io.sentry:sentry-spring-boot-starter-jakarta:7.18.0'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.assertj:assertj-core:3.25.1'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.jcodec:jcodec-javase:0.2.5'
    runtimeOnly 'org.postgresql:postgresql'
}


test {
    useJUnitPlatform()
}

jar {
    enabled = false
}
